--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="yandex-verification" content="5526dc94a3f7ea3a" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="./favicon.ico">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
